gccida/c0/ggc_mark_trees
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_mark_trees/src/ggc-common.c:1016:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+194h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_mark_trees/src/ggc-common.c:1143:29: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
first_rtl = first_rtl_op( ( tree_code)( unsigned __int8)*( ( _DWORD *)&t->common + 4)); 
                            ^~~~~~~~~
                            tree_cons
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_mark_trees/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_mark_trees/src/ggc-common.c:1143:41: error: expected expression
first_rtl = first_rtl_op( ( tree_code)( unsigned __int8)*( ( _DWORD *)&t->common + 4)); 
                                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_mark_trees/src/obj/ggc-common.o] Error 1
